binrw/tests/ui/binrw_br_temp_no_bw_ignore.stderr
error: `#[br(temp)]` is invalid without a corresponding `#[bw(ignore)]`, `#[bw(calc)]`, or `#[bw(try_calc)]`
 --> tests/ui/binrw_br_temp_no_bw_ignore.rs:5:5
  |
5 | /     #[br(temp)]
6 | |     len: u32,
  | |____________^
